syntax = "proto3";

package jobzee.candidate_service;

option go_package = "github.com/jobzee/jobzee-backend/proto/candidate_service";
option java_multiple_files = true;
option java_package = "com.jobzee.candidateservice";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Candidate Service definition
service CandidateService {
  // Create a new candidate
  rpc CreateCandidate(CreateCandidateRequest) returns (Candidate);
  
  // Get a candidate by ID
  rpc GetCandidate(GetCandidateRequest) returns (Candidate);
  
  // List candidates with optional filtering
  rpc ListCandidates(ListCandidatesRequest) returns (ListCandidatesResponse);
  
  // Update an existing candidate
  rpc UpdateCandidate(UpdateCandidateRequest) returns (Candidate);
  
  // Delete a candidate
  rpc DeleteCandidate(DeleteCandidateRequest) returns (google.protobuf.Empty);
  
  // Search candidates by criteria
  rpc SearchCandidates(SearchCandidatesRequest) returns (SearchCandidatesResponse);
  
  // Get candidate statistics
  rpc GetCandidateStats(GetCandidateStatsRequest) returns (CandidateStats);
}

// Experience entity
message Experience {
  string company = 1;
  string position = 2;
  string description = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  bool current = 6;
}

// Education entity
message Education {
  string institution = 1;
  string degree = 2;
  string field_of_study = 3;
  google.protobuf.Timestamp start_date = 4;
  google.protobuf.Timestamp end_date = 5;
  string grade = 6;
}

// Candidate entity
message Candidate {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string location = 5;
  repeated string skills = 6;
  repeated Experience experience = 7;
  repeated Education education = 8;
  int32 experience_years = 9;
  repeated string preferred_roles = 10;
  string salary_expectation = 11;
  string status = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// Create candidate request
message CreateCandidateRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string location = 4;
  repeated string skills = 5;
  repeated Experience experience = 6;
  repeated Education education = 7;
  int32 experience_years = 8;
  repeated string preferred_roles = 9;
  string salary_expectation = 10;
}

// Get candidate request
message GetCandidateRequest {
  string id = 1;
}

// List candidates request
message ListCandidatesRequest {
  int32 page_size = 1;
  string page_token = 2;
  string location = 3;
  repeated string skills = 4;
  int32 min_experience_years = 5;
  int32 max_experience_years = 6;
}

// List candidates response
message ListCandidatesResponse {
  repeated Candidate candidates = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// Update candidate request
message UpdateCandidateRequest {
  string id = 1;
  Candidate candidate = 2;
}

// Delete candidate request
message DeleteCandidateRequest {
  string id = 1;
}

// Search candidates request
message SearchCandidatesRequest {
  string query = 1;
  repeated string skills = 2;
  string location = 3;
  int32 min_experience_years = 4;
  int32 max_experience_years = 5;
  repeated string preferred_roles = 6;
  string salary_range = 7;
  int32 page_size = 8;
  string page_token = 9;
}

// Search candidates response
message SearchCandidatesResponse {
  repeated Candidate candidates = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  repeated float relevance_scores = 4;
}

// Get candidate stats request
message GetCandidateStatsRequest {
  string location = 1;
  repeated string skills = 2;
  string time_period = 3; // daily, weekly, monthly, yearly
}

// Candidate statistics
message CandidateStats {
  int32 total_candidates = 1;
  int32 active_candidates = 2;
  map<string, int32> candidates_by_location = 3;
  map<string, int32> candidates_by_experience_level = 4;
  repeated string top_skills = 5;
  repeated string top_preferred_roles = 6;
  float average_experience_years = 7;
  google.protobuf.Timestamp last_updated = 8;
} 