syntax = "proto3";

package jobzee.job_service;

option go_package = "github.com/jobzee/jobzee-backend/proto/job_service";
option java_multiple_files = true;
option java_package = "com.jobzee.jobservice";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

// Job Service definition
service JobService {
  // Create a new job
  rpc CreateJob(CreateJobRequest) returns (Job);
  
  // Get a job by ID
  rpc GetJob(GetJobRequest) returns (Job);
  
  // List jobs with optional filtering
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  
  // Update an existing job
  rpc UpdateJob(UpdateJobRequest) returns (Job);
  
  // Delete a job
  rpc DeleteJob(DeleteJobRequest) returns (google.protobuf.Empty);
  
  // Search jobs by criteria
  rpc SearchJobs(SearchJobsRequest) returns (SearchJobsResponse);
  
  // Get job statistics
  rpc GetJobStats(GetJobStatsRequest) returns (JobStats);
}

// Job entity
message Job {
  string id = 1;
  string title = 2;
  string company = 3;
  string location = 4;
  string description = 5;
  repeated string requirements = 6;
  repeated string skills = 7;
  string experience_level = 8;
  string salary_range = 9;
  string job_type = 10;
  bool remote_friendly = 11;
  string status = 12;
  google.protobuf.Timestamp created_at = 13;
  google.protobuf.Timestamp updated_at = 14;
}

// Create job request
message CreateJobRequest {
  string title = 1;
  string company = 2;
  string location = 3;
  string description = 4;
  repeated string requirements = 5;
  repeated string skills = 6;
  string experience_level = 7;
  string salary_range = 8;
  string job_type = 9;
  bool remote_friendly = 10;
}

// Get job request
message GetJobRequest {
  string id = 1;
}

// List jobs request
message ListJobsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string company = 3;
  string location = 4;
  string experience_level = 5;
  string job_type = 6;
  bool remote_friendly = 7;
}

// List jobs response
message ListJobsResponse {
  repeated Job jobs = 1;
  string next_page_token = 2;
  int32 total_count = 3;
}

// Update job request
message UpdateJobRequest {
  string id = 1;
  Job job = 2;
}

// Delete job request
message DeleteJobRequest {
  string id = 1;
}

// Search jobs request
message SearchJobsRequest {
  string query = 1;
  repeated string skills = 2;
  string location = 3;
  string experience_level = 4;
  string salary_range = 5;
  bool remote_friendly = 6;
  int32 page_size = 7;
  string page_token = 8;
}

// Search jobs response
message SearchJobsResponse {
  repeated Job jobs = 1;
  string next_page_token = 2;
  int32 total_count = 3;
  repeated float relevance_scores = 4;
}

// Get job stats request
message GetJobStatsRequest {
  string company = 1;
  string location = 2;
  string time_period = 3; // daily, weekly, monthly, yearly
}

// Job statistics
message JobStats {
  int32 total_jobs = 1;
  int32 active_jobs = 2;
  int32 remote_jobs = 3;
  map<string, int32> jobs_by_experience_level = 4;
  map<string, int32> jobs_by_location = 5;
  map<string, int32> jobs_by_company = 6;
  repeated string top_skills = 7;
  google.protobuf.Timestamp last_updated = 8;
} 